# mafia-remake

./: .env.example  .gitignore  Cargo.toml  README.md  bot.py  bot_constants.py  bot_state.py  build.rs  config.example.json  config.json  game.py  game_models.py  leaderboard_image.py  requirements.txt  role_data.py  simulate_game.py  stats_store.py  web_settings.py
.cargo/: config.toml
activity/: index.html  vite.config.ts
activity/src/: App.tsx  api.ts  discord.ts  main.tsx  styles.css  types.ts
activity/src/components/: ChatPanel.tsx
cogs/: anonymous_chat.py  channel_runtime.py  game_engine.py  game_runner.py  settings.py  status_stats.py  views.py
docs/: rating_plan.md
scripts/: bootstrap-linux-rust.sh  bootstrap-windows-rust.ps1  build-linux-aarch64.sh  build-linux-glibc.sh  build-linux.sh  build-windows.ps1  common-linux.sh  common-windows.ps1  run-linux.sh  run-windows.ps1  test-windows.ps1
src/: activity.rs  channel.rs  commands.rs  embed.rs  game.rs.bak  main.rs  runner.rs  web_settings.rs
src/game/: actions.rs  actors.rs  mod.rs  resolve.rs  vote.rs
