[package]
name = "mafia-remake"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mafia"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ab_glyph = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dashmap = "6.1"
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
poise = { version = "0.6", default-features = false, features = ["handle_panics"] }
rand = "0.9"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
axum = { version = "0.8", features = ["ws", "json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
serenity = { version = "0.12.5", default-features = false, features = ["native_tls_backend"] }

[target.'cfg(not(windows))'.dependencies]
serenity = { version = "0.12.5", default-features = false, features = ["rustls_backend"] }

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1
incremental = true

[profile.test.package."*"]
debug = 0

[profile.release]
codegen-units = 22
incremental = true
lto = false
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.maxperf]
inherits = "release"
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
